dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
        - name: tomcat
          image: awsdevops183/tomcat
          ports:
            - containerPort: 8080
