dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dev
spec:
  selector:
    app: dev
  ports:
    - targetPort: 8080
      port: 80
