dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dev.awscloudops.shop
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev
            port:
              number: 80
